force-app/main/default/objects/Other_Traveller__c/Other_Traveller__c.object-meta.xml
<CustomObject>
    <label>Other Traveller</label>
    <nameField>
        <displayFormat>OT-{0000}</displayFormat>
        <label>Other Traveller Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Travellers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>