force-app/main/default/objects/Other_Traveller__c/fields/Allow_Sharer_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Allow_Sharer_Check_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Sharer Check-In?</label>
    <type>Checkbox</type>
</CustomField>