force-app/main/default/objects/Other_Traveller__c/fields/Patron__c.field-meta.xml
<CustomField>
    <fullName>Patron__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patron</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Other Travellers</relationshipLabel>
    <relationshipName>Other_Travellers</relationshipName>
    <type>Lookup</type>
</CustomField>