force-app/main/default/objects/Other_Traveller__c/fields/Patron_ID__c.field-meta.xml
<CustomField>
    <fullName>Patron_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patron ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>