force-app/main/default/objects/Other_Traveller__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Other Travellers</relationshipLabel>
    <relationshipName>Other_Travellers</relationshipName>
    <type>Lookup</type>
</CustomField>