force-app/main/default/objects/Other_Traveller__c/recordTypes/Flight_Other_Traveller.recordType-meta.xml
<RecordType>
    <fullName>Flight_Other_Traveller</fullName>
    <active>true</active>
    <label>Flight Other Traveller</label>
</RecordType>