force-app/main/default/objects/Other_Traveller__c/recordTypes/Hotel_Other_Traveller.recordType-meta.xml
<RecordType>
    <fullName>Hotel_Other_Traveller</fullName>
    <active>true</active>
    <label>Hotel Other Traveller</label>
</RecordType>