force-app/main/default/objects/Other_Traveller__c/validationRules/NoEditIfPatronPopulated.validationRule-meta.xml
<ValidationRule>
    <fullName>NoEditIfPatronPopulated</fullName>
    <active>true</active>
    <errorConditionFormula>IF( $Permission.Skip_Validations_Permission, false, 
not(isnew()) &amp;&amp; not(isblank(( Patron__c ))))</errorConditionFormula>
    <errorMessage>You cannot change any details if Patron has been populated.</errorMessage>
</ValidationRule>