force-app/main/default/objects/Other_Traveller__c/validationRules/SharerField.validationRule-meta.xml
<ValidationRule>
    <fullName>SharerField</fullName>
    <active>false</active>
    <errorConditionFormula>Service__r.RecordType.Name != &apos;Hotel Booking&apos; &amp;&amp;  Allow_Sharer_Check_In__c == true &amp;&amp; $Permission.Skip_Validations_Permission = False</errorConditionFormula>
    <errorDisplayField>Allow_Sharer_Check_In__c</errorDisplayField>
    <errorMessage>Field can only be used for Hotel Service Booking</errorMessage>
</ValidationRule>