force-app/main/default/objects/Other_Traveller__c/validationRules/TravellerCannotBeSame.validationRule-meta.xml
<ValidationRule>
    <fullName>TravellerCannotBeSame</fullName>
    <active>true</active>
    <errorConditionFormula>Patron__c ==  Service__r.Contact__c &amp;&amp; NOT($Permission.Skip_Validations_Permission)</errorConditionFormula>
    <errorMessage>Traveller cannot be the same as Patron</errorMessage>
</ValidationRule>